2010-11-05  Sancho Lerena <slerena@artica.es>

	* Makefile.PL: Now default install for libs are the same than used in
	RPM, this will help to avoid problems of duped libs.

	* pandora_server.spec,
        pandora_server.redhat.spec: Update version and release.

2010-11-04  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	util/pandora_manage.pl: Improved the policies
	appliement with checks and the external
	alerts addition

2010-11-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: limpia_cadena removes unwanted
	  characters instead or replacing them with blank spaces.

2010-11-03  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_recode_db.pl: Added a recode script to add
	html entities to secific strings of a database. This script is usefull
	to 3.1 to 3.2 migration of Pandora FMS.

2010-11-02  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	lib/PandoraFMS/ReconServer.pm
	lib/PandoraFMS/DataServer.pm
	lib/PandoraFMS/Tools.pm: Fixed insert db operations
	in server to store the html entities. This improves
	fix bug 3096436

2010-11-02  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed a missed typo

2010-11-02  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed a module types bug and
	html entities codification

2010-11-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* DEBIAN/make_deb_package.sh: fixed recursive infinite loop with try to
	copy "temp_package" into "temp_package/usr/share/pandora_agent/temp_package"
	again and again.

2010-11-01  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control,
	DEBIAN/make_deb_package.sh
	pandora_server.spec
	lib/PandoraFMS/Config.pm
	pandora_server.redhat.spec:  Version updates and small changes for packaging
	the 3.2 RC1 version in the next days/hours.

2010-10-28  Sergio Martin <sergio.martin@artica.es>
