@@ -150,7 +150,7 @@ sub help_screen{
 
 sub pandora_sync_main ($$$) {
 	my ($dbh_source, $dbh_dest, $history_dbh) = @_;
-	
+
 	$|++;
 	my $success = 0;
 	my $percent;
@@ -178,7 +178,9 @@ sub pandora_sync_main ($$$) {
 		
 	# Mixed cases	
 	empty_table($dbh_dest, 'tlayout_data');
-	empty_table($dbh_dest, 'tevento');
+	if($sync_data == 1) {
+		empty_table($dbh_dest, 'tevento');
+	}
 	
 	print "\n\n";
 	
@@ -190,10 +192,13 @@ sub pandora_sync_main ($$$) {
 	@columns = ('id_agente_modulo', 'id_agent');
 	@types = ('module', 'agent');
 	enterprise_hook('sync_clone_table', [$dbh_source, $dbh_dest, 'tlayout_data', \@columns, \@types, @id_agent_comparation, @id_agentmodule_comparation, @id_server_export_comparation, @id_server_comparation]);
-	@columns = ('id_agentmodule', 'id_agente');
-	@types = ('module', 'agent');
-	enterprise_hook('sync_clone_table', [$dbh_source, $dbh_dest, 'tevento', \@columns, \@types, @id_agent_comparation, @id_agentmodule_comparation, @id_server_export_comparation, @id_server_comparation]);
-
+	
+	if($sync_data == 1) {
+		@columns = ('id_agentmodule', 'id_agente');
+		@types = ('module', 'agent');
+		enterprise_hook('sync_clone_table', [$dbh_source, $dbh_dest, 'tevento', \@columns, \@types, @id_agent_comparation, @id_agentmodule_comparation, @id_server_export_comparation, @id_server_comparation]);
+	}
+	
 	my $errors = $errors_agents + $errors_modules + $errors_servers + $errors_exportservers;
 
 	if($errors == 0) {
